--- a/test.ipynb
+++ b/test.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -26,7 +28,6 @@
     "    config.gpu_options.allow_growth = True\n",
     "    return tf.Session(config=config)\n",
     "\n",
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "keras.backend.tensorflow_backend.set_session(get_session())"
    ]
   },
@@ -59,9 +60,7 @@
     "    answer_area = get_area(answer)\n",
     "    result_area = get_area(result)\n",
     "    inter_area = get_inter_area(answer, result)\n",
-    "    #print answer\n",
-    "    #print result\n",
-    "    #print answer_area, result_area, inter_area\n",
+    "    \n",
     "    if inter_area != 0:\n",
     "        IoU = max(float(inter_area) / float(answer_area + result_area - inter_area), 0.)\n",
     "    else:\n",
@@ -185,12 +184,16 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#ClassLable Info\n",
     "Class_Path = '/media/hwejin/SSD_1/DATA/DATAForPaper_v2/Common/class.csv'\n",
+    "\n",
     "Annotation_Path = '/media/hwejin/SSD_1/DATA/DATAForPaper_v2/Annotation/FINAL'\n",
-    "Out_Path = '/media/hwejin/SSD_1/DATA/DATAForPaper_v2/OUT/'\n",
+    "Img_Out_Path = '/media/hwejin/SSD_1/DATA/DATAForPaper_v2/OUT/'\n",
     "Result_path = '/media/hwejin/SSD_1/DATA/DATAForPaper_v2/Result/'\n"
    ]
   },
@@ -219,12 +222,12 @@
     "\n",
     "        \n",
     "\n",
-    "        out_dir_path = os.path.join(Result_path, data_type)\n",
-    "        if not os.path.isdir(out_dir_path):\n",
-    "            os.mkdir(out_dir_path)\n",
-    "        out_dir_path = os.path.join(out_dir_path, test_name)\n",
-    "        if not os.path.isdir(out_dir_path):\n",
-    "            os.mkdir(out_dir_path)\n",
+    "        result_dir_path = os.path.join(Result_path, data_type)\n",
+    "        if not os.path.isdir(result_dir_path):\n",
+    "            os.mkdir(result_dir_path)\n",
+    "        result_dir_path = os.path.join(result_dir_path, test_name)\n",
+    "        if not os.path.isdir(result_dir_path):\n",
+    "            os.mkdir(result_dir_path)\n",
     "\n",
     "\n",
     "\n",
@@ -249,9 +252,6 @@
     "            # copy to draw on\n",
     "            draw = Load_image.copy()\n",
     "            draw = cv2.cvtColor(draw, cv2.COLOR_BGR2RGB)\n",
-    "            \n",
-    "\n",
-    "            \n",
     "            annotations = val_generator.load_annotations(index)\n",
     "            \n",
     "            \n",
@@ -312,6 +312,7 @@
     "                    if area > 5000:\n",
     "                        cv2.rectangle(draw, (annotation[0][0], annotation[0][1]), (annotation[0][2], annotation[0][3]), (255, 0, 0), 5)\n",
     "                        cv2.putText(draw, caption, (annotation[0][0], annotation[0][1] - 10), cv2.FONT_HERSHEY_PLAIN, 3, (255, 0, 0), 5)\n",
+    "            \n",
     "            # visualize annotations\n",
     "            for annotation in annotations:\n",
     "                label = int(annotation[4])\n",
@@ -324,7 +325,7 @@
     "                plt.axis('off')\n",
     "                plt.imshow(draw)\n",
     "                plt.show()\n",
-    "                out_img_path = os.path.join(Out_Path, val_generator.image_names[index])\n",
+    "                out_img_path = os.path.join(Img_Out_Path, val_generator.image_names[index])\n",
     "                \n",
     "                cv2.imwrite(out_img_path, draw)   "
    ]
